<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView 
        style="@style/GroupTitle"
        android:text="@string/group_title_connect"
        android:padding="3dp"      
        android:layout_marginBottom ="5dp"     
        />

    
    

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/imageViewConnectionState"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_state_disconnected" />
        
        <TextView
        android:id="@+id/textViewConnectionState"
        android:layout_width="match_parent"
        android:layout_height="40dp"        
        android:text="Connection state"
        android:textAppearance="?android:attr/textAppearanceLarge" 
        android:gravity="center_vertical"
        />
    </LinearLayout>

    <Button
        android:id="@+id/btn_disconnect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_disconnect" />
    
	<TextView 
        style="@style/GroupTitle"
        android:text="@string/group_title_files"       
        android:padding="3dp"
        android:layout_marginTop="10dp"  
        android:layout_marginBottom ="5dp"
        />

	<TextView
	    android:id="@+id/textViewFileCount"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:textAppearance="?android:attr/textAppearanceLarge" 
	    android:text="TextView" />

	<ProgressBar
	    android:id="@+id/progressBarTrans"
	    style="?android:attr/progressBarStyleHorizontal"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:visibility="gone"
	     />

	<TextView 
        style="@style/GroupTitle"
        android:text="@string/group_title_takephoto"   
        android:padding="3dp"
        android:layout_marginTop="10dp"  
        android:layout_marginBottom ="5dp"      
        />
	

	<ImageButton
	    android:id="@+id/btn_takephoto"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:src="@drawable/ic_take_photo" 
	    android:contentDescription="test image button"
	    android:text="@string/btn_takephoto"
	    />
	<ImageButton
	    android:id="@+id/btn_selectphoto"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:src="@drawable/ic_select_image" 
	    android:contentDescription="select image button"
	    android:text="@string/btn_selectphoto"
	    />
	
</LinearLayout>